# archeion_now

./: .gitignore  MANIFEST.in  README.md  agent.py  arxiv_fetcher.py  config.py  config.yaml  interests.txt  main.py  output_manager.py  pdf_reader.py  pyproject.toml  requirements.txt  web_ui.py
templates/: base.html  cache.html  config.html  dashboard.html  interests.html  papers.html  setup.html
